k8s/apps/services/vaultwarden/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.cglavin50.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    store:
      name: default
      namespace: kube-system
